// Enums
Enum UserStatus {
  active
  inactive
}



Enum TimeEntryType {
  entry
  exit
}

Enum TimeEntrySource {
  manual
  device
}

Enum DailyEngagementStatus {
  draft
  pending
  approved
  rejected
}

Enum DailyEngagementType {
  work
  day_off
  holiday
  medical
  absence
}

// ==========================================
// SCHEMA: CORE (Azul)
// ==========================================

Table core.persons [headercolor: #2B6CB0] {
  id uuid [primary key]
  name string [not null]
  email string [not null]
  cellphone string [not null]
}

Table core.companies [headercolor: #2B6CB0] {
  id uuid [primary key]
  name string [not null]
  cnpj string [not null]
}


Table core.users [headercolor: #2B6CB0] {
  id uuid [primary key]
  email string [not null]
  password string [not null]
  status UserStatus
}

Table core.userCompanies [headercolor: #2B6CB0] {
  id uuid [primary key]
  companyId uuid [not null]
  userId uuid [not null]
  personId uuid
  created_at datetime
  updated_at datetime
}

// ==========================================
// SCHEMA: JOB (Laranja)
// ==========================================

Enum EmploymentStatus {
  hired
  experience
  left
}

Enum EmploymentType {
  frelancer
  dayli
  temporary
  completed
}

Table job.employees [headercolor: #D69E2E] {
  id uuid [primary key]
  companyId uuid [not null]
  personId uuid [not null]
  registerNumber number [not null]
}

Table job.employment [headercolor: #D69E2E] {
  id uuid [primary key]
  workloadId uuid [not null]
  employeeId uuid [not null]
  status EmploymentStatus [not null]
  kind EmploymentType [not null]
  register_at datetime [not null]
  left_at datetime
}

Table job.workload [headercolor: #D69E2E] {
  id uuid [primary key]
  companyId uuid [not null]
  description string [not null]
  monthly_hours integer [not null]
  weekly_hours integer [not null]
  entry_time time [not null]
  left_time time [not null]
  interval_start_at time [not null]
  interval_end_at time [not null]
}


// ==========================================
// SCHEMA: ATTENDANCE (Verde)
// ==========================================

Table attendance.daily_engagements [headercolor: #38A169] {
  id uuid [primary key]
  companyId uuid [not null]
  employeeId uuid [not null]
  workloadId uuid
  date date [not null]
  type DailyEngagementType [not null]
  status DailyEngagementStatus [not null]
  worked_minutes integer
  expected_minutes integer
  balance_minutes integer
  diaria_value decimal
  note string
  draftedBy uuid
  approvedBy uuid
  approvedAt datetime
  created_at datetime
  updated_at datetime

  indexes {
    (companyId, employeeId, date) [unique]
  }
}

Table attendance.time_entries [headercolor: #38A169] {
  id uuid [primary key]
  companyId uuid [not null]
  dailyEngagementId uuid [not null]
  punched_at datetime [not null]
  type TimeEntryType [not null]
  source TimeEntrySource [not null]
  note string
  created_at datetime
  updated_at datetime
}


// ==========================================
// RELATIONSHIPS / REFS
// ==========================================

// Core
Ref: core.userCompanies.companyId > core.companies.id
Ref: core.userCompanies.userId > core.users.id
Ref: core.userCompanies.personId > core.persons.id

// Job
Ref: job.employees.personId > core.persons.id
Ref: job.employees.companyId > core.companies.id
Ref: job.employment.workloadId > job.workload.id
Ref: job.workload.companyId > core.companies.id

// Attendance
Ref: attendance.daily_engagements.companyId > core.companies.id
Ref: attendance.daily_engagements.employeeId > job.employees.id
Ref: attendance.daily_engagements.workloadId > job.workload.id
Ref: attendance.daily_engagements.draftedBy > core.userCompanies.id
Ref: attendance.daily_engagements.approvedBy > core.userCompanies.id
Ref: attendance.time_entries.companyId > core.companies.id
Ref: attendance.time_entries.dailyEngagementId > attendance.daily_engagements.id
